Fix mobile shelf spacing.

--- a/src/components/shelf/shelf.css
+++ b/src/components/shelf/shelf.css
@@ -118,6 +118,10 @@
         display: none;
     }
 
+    .shelf-tiles {
+        padding-bottom: 45px;
+    }
+
     .shelf-tile {
         margin-bottom: 0;
     }
